{
  "version": 4,
  "terraform_version": "0.12.6",
  "serial": 19,
  "lineage": "b8e63944-e87c-627b-9673-19e07a5ae559",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "my-elb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:939397960465:loadbalancer/my-elb",
            "availability_zones": [
              "eu-west-1a",
              "eu-west-1b"
            ],
            "connection_draining": true,
            "connection_draining_timeout": 400,
            "cross_zone_load_balancing": true,
            "dns_name": "my-elb-1977259307.eu-west-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTP:80/",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "my-elb",
            "idle_timeout": 60,
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "my-elb",
            "security_groups": [
              "sg-07b916fa13e7ec726"
            ],
            "source_security_group": "939397960465/elb",
            "source_security_group_id": "sg-07b916fa13e7ec726",
            "subnets": [
              "subnet-007b8c922db1ac059",
              "subnet-03e93c37f2b922327"
            ],
            "tags": {
              "Name": "my-elb"
            },
            "zone_id": "Z32O12XQLNTSW2"
          },
          "depends_on": [
            "aws_security_group.elb-securitygroup",
            "aws_subnet.main-public-1",
            "aws_subnet.main-public-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main-gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0b1bbb80e1e662782",
            "owner_id": "939397960465",
            "tags": {
              "Name": "main"
            },
            "vpc_id": "vpc-0955e022f50dc9635"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main-public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0ca8065d4dbe94ba7",
            "owner_id": "939397960465",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b1bbb80e1e662782",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "main-public-1"
            },
            "vpc_id": "vpc-0955e022f50dc9635"
          },
          "depends_on": [
            "aws_internet_gateway.main-gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-public-1-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-084b7b30c2a36ebc0",
            "route_table_id": "rtb-0ca8065d4dbe94ba7",
            "subnet_id": "subnet-03e93c37f2b922327"
          },
          "depends_on": [
            "aws_route_table.main-public",
            "aws_subnet.main-public-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-public-2-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04e9a313a35a972b9",
            "route_table_id": "rtb-0ca8065d4dbe94ba7",
            "subnet_id": "subnet-007b8c922db1ac059"
          },
          "depends_on": [
            "aws_route_table.main-public",
            "aws_subnet.main-public-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-public-3-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0884730306dd4bf6a",
            "route_table_id": "rtb-0ca8065d4dbe94ba7",
            "subnet_id": "subnet-01ef9c3b4602f1092"
          },
          "depends_on": [
            "aws_route_table.main-public",
            "aws_subnet.main-public-3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elb-securitygroup",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:939397960465:security-group/sg-07b916fa13e7ec726",
            "description": "security group for load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07b916fa13e7ec726",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "elb",
            "name_prefix": null,
            "owner_id": "939397960465",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "elb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0955e022f50dc9635"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "myinstance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:939397960465:security-group/sg-05ce97cfde4877b43",
            "description": "security group for my instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05ce97cfde4877b43",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07b916fa13e7ec726"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "myinstance",
            "name_prefix": null,
            "owner_id": "939397960465",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "myinstance"
            },
            "timeouts": null,
            "vpc_id": "vpc-0955e022f50dc9635"
          },
          "depends_on": [
            "aws_security_group.elb-securitygroup",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-private-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:939397960465:subnet/subnet-0a7286e474b54e41a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-0a7286e474b54e41a",
            "map_public_ip_on_launch": false,
            "owner_id": "939397960465",
            "tags": {
              "Name": "main-private-1"
            },
            "vpc_id": "vpc-0955e022f50dc9635"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-private-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:939397960465:subnet/subnet-04b687f2e9646bd97",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-04b687f2e9646bd97",
            "map_public_ip_on_launch": false,
            "owner_id": "939397960465",
            "tags": {
              "Name": "main-private-2"
            },
            "vpc_id": "vpc-0955e022f50dc9635"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-private-3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:939397960465:subnet/subnet-0cde0ed621297f592",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.6.0/24",
            "id": "subnet-0cde0ed621297f592",
            "map_public_ip_on_launch": false,
            "owner_id": "939397960465",
            "tags": {
              "Name": "main-private-3"
            },
            "vpc_id": "vpc-0955e022f50dc9635"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-public-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:939397960465:subnet/subnet-03e93c37f2b922327",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-03e93c37f2b922327",
            "map_public_ip_on_launch": true,
            "owner_id": "939397960465",
            "tags": {
              "Name": "main-public-1"
            },
            "vpc_id": "vpc-0955e022f50dc9635"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-public-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:939397960465:subnet/subnet-007b8c922db1ac059",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-007b8c922db1ac059",
            "map_public_ip_on_launch": true,
            "owner_id": "939397960465",
            "tags": {
              "Name": "main-public-2"
            },
            "vpc_id": "vpc-0955e022f50dc9635"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-public-3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:939397960465:subnet/subnet-01ef9c3b4602f1092",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-01ef9c3b4602f1092",
            "map_public_ip_on_launch": true,
            "owner_id": "939397960465",
            "tags": {
              "Name": "main-public-3"
            },
            "vpc_id": "vpc-0955e022f50dc9635"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:939397960465:vpc/vpc-0955e022f50dc9635",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0243b437706a5fa1e",
            "default_route_table_id": "rtb-0d59ddd2c76b8ba9e",
            "default_security_group_id": "sg-08c6df96c41a7b703",
            "dhcp_options_id": "dopt-726f2814",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0955e022f50dc9635",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0d59ddd2c76b8ba9e",
            "owner_id": "939397960465",
            "tags": {
              "Name": "main"
            }
          }
        }
      ]
    }
  ]
}